修改setup文件,增加依赖项

--- a/automated_test_framework/config.yml
+++ b/automated_test_framework/config.yml
@@ -6,7 +6,7 @@ ServerConfig:
 MySqlConfig:
   host: 127.0.0.1
   username: root
-  password: '123456'
+  password: root
   database: auto_test_db
   port: 3306
 
